--- a/lesson-4 - on efn.ipynb
+++ b/lesson-4 - on efn.ipynb
@@ -56,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_train_samples = 5000 # 50000 train выборка приходится ограничивать т.к. при стандартном выборке размер привышает 28 Gb \n",
-    "nb_valid_samples = 1000 # 10000 test выборка\n",
+    "nb_train_samples = 50000 # 50000 train выборка приходится ограничивать т.к. при стандартном выборке размер привышает 28 Gb \n",
+    "nb_valid_samples = 10000 # 10000 test выборка\n",
     "\n",
     "def load_cifar10_data(height, width):\n",
     "\n",
@@ -79,6 +79,26 @@
     "    return X_train, Y_train, X_valid, Y_valid\n",
     "\n",
     "x_train, y_train, x_test, y_test = load_cifar10_data(height, width)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(50000, 224, 224, 3)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train.shape"
    ]
   },
   {
@@ -129,78 +149,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Использование data augmentation в реальном времени\n",
-      "Epoch 1/50\n",
-      "625/625 [==============================] - 109s 174ms/step - loss: 4.4215 - acc: 0.0578 - val_loss: 4.0713 - val_acc: 0.1510\n",
-      "Epoch 2/50\n",
-      "625/625 [==============================] - 98s 157ms/step - loss: 3.5943 - acc: 0.2272 - val_loss: 3.0736 - val_acc: 0.3350\n",
-      "Epoch 3/50\n",
-      "625/625 [==============================] - 99s 158ms/step - loss: 2.6669 - acc: 0.3822 - val_loss: 2.1564 - val_acc: 0.4910\n",
-      "Epoch 4/50\n",
-      "625/625 [==============================] - 97s 156ms/step - loss: 2.0854 - acc: 0.4820 - val_loss: 1.5795 - val_acc: 0.5960\n",
-      "Epoch 5/50\n",
-      "625/625 [==============================] - 97s 156ms/step - loss: 1.7627 - acc: 0.5428 - val_loss: 1.4480 - val_acc: 0.6270\n",
-      "Epoch 6/50\n",
-      "625/625 [==============================] - 97s 156ms/step - loss: 1.5037 - acc: 0.6080 - val_loss: 1.6752 - val_acc: 0.5460\n",
-      "Epoch 7/50\n",
-      "625/625 [==============================] - 97s 156ms/step - loss: 1.3507 - acc: 0.6454 - val_loss: 1.2838 - val_acc: 0.6510\n",
-      "Epoch 8/50\n",
-      "625/625 [==============================] - 97s 156ms/step - loss: 1.1513 - acc: 0.6914 - val_loss: 1.1948 - val_acc: 0.6700\n",
-      "Epoch 9/50\n",
-      "625/625 [==============================] - 97s 156ms/step - loss: 1.0485 - acc: 0.7150 - val_loss: 1.1107 - val_acc: 0.6920\n",
-      "Epoch 10/50\n",
-      "625/625 [==============================] - 98s 157ms/step - loss: 0.9312 - acc: 0.7494 - val_loss: 1.1301 - val_acc: 0.6780\n",
-      "Epoch 11/50\n",
-      "625/625 [==============================] - 99s 158ms/step - loss: 0.8644 - acc: 0.7732 - val_loss: 1.0520 - val_acc: 0.7260\n",
-      "Epoch 12/50\n",
-      "625/625 [==============================] - 102s 163ms/step - loss: 0.7829 - acc: 0.7900 - val_loss: 1.1692 - val_acc: 0.6800\n",
-      "Epoch 13/50\n",
-      "625/625 [==============================] - 102s 163ms/step - loss: 0.6848 - acc: 0.8150 - val_loss: 1.0676 - val_acc: 0.6940\n",
-      "Epoch 14/50\n",
-      "625/625 [==============================] - 101s 161ms/step - loss: 0.6274 - acc: 0.8358 - val_loss: 1.0391 - val_acc: 0.7230\n",
-      "Epoch 15/50\n",
-      "625/625 [==============================] - 101s 162ms/step - loss: 0.5759 - acc: 0.8508 - val_loss: 1.0098 - val_acc: 0.7380\n",
-      "Epoch 16/50\n",
-      "625/625 [==============================] - 103s 165ms/step - loss: 0.5085 - acc: 0.8680 - val_loss: 1.0192 - val_acc: 0.7320\n",
-      "Epoch 17/50\n",
-      "625/625 [==============================] - 104s 166ms/step - loss: 0.4587 - acc: 0.8826 - val_loss: 1.0778 - val_acc: 0.7320\n",
-      "Epoch 18/50\n",
-      "625/625 [==============================] - 103s 165ms/step - loss: 0.4200 - acc: 0.8902 - val_loss: 1.0104 - val_acc: 0.7340\n",
-      "Epoch 19/50\n",
-      "625/625 [==============================] - 102s 163ms/step - loss: 0.3887 - acc: 0.9030 - val_loss: 1.0001 - val_acc: 0.7430\n",
-      "Epoch 20/50\n",
-      "625/625 [==============================] - 101s 162ms/step - loss: 0.3473 - acc: 0.9136 - val_loss: 1.0480 - val_acc: 0.7320\n",
-      "Epoch 21/50\n",
-      "625/625 [==============================] - 104s 166ms/step - loss: 0.3184 - acc: 0.9188 - val_loss: 1.0405 - val_acc: 0.7370\n",
-      "Epoch 22/50\n",
-      "625/625 [==============================] - 104s 167ms/step - loss: 0.2847 - acc: 0.9312 - val_loss: 1.0760 - val_acc: 0.7320\n",
-      "Epoch 23/50\n",
-      "625/625 [==============================] - 104s 167ms/step - loss: 0.2781 - acc: 0.9326 - val_loss: 1.0720 - val_acc: 0.7450\n",
-      "Epoch 24/50\n",
-      "625/625 [==============================] - 104s 166ms/step - loss: 0.2725 - acc: 0.9304 - val_loss: 1.0704 - val_acc: 0.7290\n",
-      "\n",
-      "Epoch 00024: ReduceLROnPlateau reducing learning rate to 0.0005000000237487257.\n",
-      "Epoch 25/50\n",
-      "625/625 [==============================] - 103s 165ms/step - loss: 0.2441 - acc: 0.9406 - val_loss: 1.0095 - val_acc: 0.7410\n",
-      "Epoch 26/50\n",
-      "625/625 [==============================] - 101s 162ms/step - loss: 0.2139 - acc: 0.9512 - val_loss: 1.0370 - val_acc: 0.7470\n",
-      "Epoch 27/50\n",
-      "625/625 [==============================] - 100s 160ms/step - loss: 0.2028 - acc: 0.9544 - val_loss: 1.0527 - val_acc: 0.7370\n",
-      "Epoch 28/50\n",
-      "625/625 [==============================] - 99s 158ms/step - loss: 0.1966 - acc: 0.9606 - val_loss: 1.0549 - val_acc: 0.7430\n",
-      "Epoch 29/50\n",
-      "625/625 [==============================] - 161s 258ms/step - loss: 0.1810 - acc: 0.9624 - val_loss: 1.0497 - val_acc: 0.7420\n",
-      "Restoring model weights from the end of the best epoch\n",
-      "\n",
-      "Epoch 00029: ReduceLROnPlateau reducing learning rate to 0.0002500000118743628.\n",
-      "Epoch 00029: early stopping\n",
-      "сохранить обученную модель как C:\\Users\\LSK-17\\Desktop\\learning\\neural-networks\\saved_models\\keras_cifar100_trained_model.h5 \n",
-      "1000/1000 [==============================] - 21s 21ms/step\n",
-      "Test loss: 1.0001382565498351\n",
-      "Test accuracy: 0.7429999709129333\n"
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 28.0 GiB for an array with shape (50000, 224, 224, 3) and data type float32",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-df47974b5610>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'categorical_crossentropy'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msgd\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetrics\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'acc'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mx_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'float32'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m255.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mx_test\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'float32'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m255.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 28.0 GiB for an array with shape (50000, 224, 224, 3) and data type float32"
      ]
     }
    ],
